--- a/app/src/main/res/values-bs/strings.xml
+++ b/app/src/main/res/values-bs/strings.xml
@@ -2284,12 +2284,12 @@
   <string name="ChatsPreferenceFragment_last_backup_s">Zadnja kreirana kopija: %s</string>
   <string name="ChatsPreferenceFragment_in_progress">U toku</string>
   <string name="LocalBackupJob_creating_backup">Kreiram rezervnu kopiju…</string>
-  <string name="LocalBackupJobApi29_backups_disabled">Rezervne kopije su isključene.</string>
+  <!-- Removed by excludeNonTranslatables <string name="LocalBackupJobApi29_backups_disabled">Rezervne kopije su isključene.</string> -->
   <string name="LocalBackupJobApi29_backup_failed">Neuspjelo kreiranje rezervne kopije.</string>
   <string name="LocalBackupJobApi29_your_backup_directory_has_been_deleted_or_moved">Direktorij sa rezervnim kopijama obrisan je ili premješten.</string>
   <string name="LocalBackupJobApi29_your_backup_file_is_too_large">Vaša rezervna kopija prevelika je za pohranjivanje na ovoj lokaciji.</string>
   <string name="LocalBackupJobApi29_there_is_not_enough_space">Nema dovoljno prostora za pohranjivanje rezervne kopije.</string>
-  <string name="LocalBackupJobApi29_backup_failed_for_an_unknown_reason">Neuspjelo kreiranje rezervne kopije iz nepoznatih razloga.</string>
+  <!-- Removed by excludeNonTranslatables <string name="LocalBackupJobApi29_backup_failed_for_an_unknown_reason">Neuspjelo kreiranje rezervne kopije iz nepoznatih razloga.</string> -->
   <string name="ProgressPreference_d_messages_so_far">%d poruka do sada</string>
   <string name="RegistrationActivity_please_enter_the_verification_code_sent_to_s">Molimo unesite kōd za potvrdu koji je poslan na %s.</string>
   <string name="RegistrationActivity_wrong_number">Pogrešan broj</string>
