--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -2215,12 +2215,12 @@
   <string name="ChatsPreferenceFragment_last_backup_s">Τελευταίο αντίγραφο ασφαλείας: %s</string>
   <string name="ChatsPreferenceFragment_in_progress">Σε εξέλιξη</string>
   <string name="LocalBackupJob_creating_backup">Το αντίγραφο ασφαλείας δημιουργείται…</string>
-  <string name="LocalBackupJobApi29_backups_disabled">Τα αντίγραφα ασφαλείας απενεργοποιήθηκαν.</string>
+  <!-- Removed by excludeNonTranslatables <string name="LocalBackupJobApi29_backups_disabled">Τα αντίγραφα ασφαλείας απενεργοποιήθηκαν.</string> -->
   <string name="LocalBackupJobApi29_backup_failed">Το αντίγραφο ασφαλείας απέτυχε.</string>
   <string name="LocalBackupJobApi29_your_backup_directory_has_been_deleted_or_moved">Ο φάκελος αντίγραφων ασφαλείας έχει διαγραφεί ή μετακινηθεί.</string>
   <string name="LocalBackupJobApi29_your_backup_file_is_too_large">Το αρχείο - αντίγραφο ασφαλείας είναι πολύ μεγάλο για να αποθηκευτεί σε αυτή τη συσκευή.</string>
   <string name="LocalBackupJobApi29_there_is_not_enough_space">Δεν υπάρχει αρκετός χώρος για την αποθήκευση του αντίγραφου ασφαλείας.</string>
-  <string name="LocalBackupJobApi29_backup_failed_for_an_unknown_reason">Το αντίγραφο ασφαλείας απέτυχε για άγνωστο λόγο.</string>
+  <!-- Removed by excludeNonTranslatables <string name="LocalBackupJobApi29_backup_failed_for_an_unknown_reason">Το αντίγραφο ασφαλείας απέτυχε για άγνωστο λόγο.</string> -->
   <string name="ProgressPreference_d_messages_so_far">%d μηνύματα μέχρι τώρα</string>
   <string name="RegistrationActivity_please_enter_the_verification_code_sent_to_s">Παρακαλώ γράψε τον κωδικό επιβεβαίωσης που στάλθηκε στο %s.</string>
   <string name="RegistrationActivity_wrong_number">Λάθος αριθμός</string>
