--- a/app/src/main/res/values-nn/strings.xml
+++ b/app/src/main/res/values-nn/strings.xml
@@ -2226,12 +2226,12 @@ Du er à jour!</string>
   <string name="ChatsPreferenceFragment_last_backup_s">Siste reservekopi: %s</string>
   <string name="ChatsPreferenceFragment_in_progress">I gang</string>
   <string name="LocalBackupJob_creating_backup">Opprettar reservekopi …</string>
-  <string name="LocalBackupJobApi29_backups_disabled">Tryggleikskopiar skrudd av.</string>
+  <!-- Removed by excludeNonTranslatables <string name="LocalBackupJobApi29_backups_disabled">Tryggleikskopiar skrudd av.</string> -->
   <string name="LocalBackupJobApi29_backup_failed">Tryggleikskopiering feila.</string>
   <string name="LocalBackupJobApi29_your_backup_directory_has_been_deleted_or_moved">Mappa for tryggleikskopiar er sletta eller flytta.</string>
   <string name="LocalBackupJobApi29_your_backup_file_is_too_large">Tryggleikskopi-fila er for stor til å lagra på denne plasseringa.</string>
   <string name="LocalBackupJobApi29_there_is_not_enough_space">Du har ikkje nok lagringsplass til tryggleikskopien din.</string>
-  <string name="LocalBackupJobApi29_backup_failed_for_an_unknown_reason">Tryggleikskopiering feila og me veit ikkje kvifor.</string>
+  <!-- Removed by excludeNonTranslatables <string name="LocalBackupJobApi29_backup_failed_for_an_unknown_reason">Tryggleikskopiering feila og me veit ikkje kvifor.</string> -->
   <string name="ProgressPreference_d_messages_so_far">%dmeldingar så langt</string>
   <string name="RegistrationActivity_please_enter_the_verification_code_sent_to_s">Skriv inn stadfestingskoden sendt til %s</string>
   <string name="RegistrationActivity_wrong_number">Feil nummer</string>
